--- a/templates/day.html
+++ b/templates/day.html
@@ -5,7 +5,7 @@
 {% block tabs %}
 {{ components.navtabs([
   ("calendar.html", "Calendar", "calendar-html"),
-  ("tutorials.html", "Nov 10", "tutorials-html"),
+  ("day_1.html", "Nov 10", "day_1-html"),
   ("day_2.html", "Nov 11", "day_2-html"),
   ("day_3.html", "Nov 12", "day_3-html"),
   ("day_4.html", "Nov 13", "day_4-html"),
@@ -21,7 +21,7 @@
 
   {% if day.tutorials %}
     {{ components.subsection_tag("Tutorials", "tut") }}
-    {{ components.tutorialscard(tutorials, tzone, tut_md) }}
+    {{ components.tutorialscard(day.tutorials, tzone, tut_md) }}
   {% endif %}
 
   {% if day.opening %}
