--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -9,7 +9,7 @@
 {% block tabs %}
 {{ components.navtabs([
   ("index.html", "Calendar", "calendar-html"),
-  ("tutorials.html", "Nov 10", "tutorials-html"),
+  ("day_1.html", "Nov 10", "day_1-html"),
   ("day_2.html", "Nov 11", "day_2-html"),
   ("day_3.html", "Nov 12", "day_3-html"),
   ("day_4.html", "Nov 13", "day_4-html"),
