--- a/templates/poster.html
+++ b/templates/poster.html
@@ -27,7 +27,7 @@
             {{paper.content.title}}
         </h2>
         <h3 class="card-subtitle mb-2 text-muted text-left">
-            {% for author in paper.content.authors %}
+            {% for author in paper.content.authors_and_affil %}
             <a href="papers.html?filter=authors&search={{author}}"
                class="text-muted"
             >{{author}}</a
