--- a/static/css/main.css
+++ b/static/css/main.css
@@ -335,3 +335,33 @@ img[alt="SoundBrilliance"]{
   max-width: 200px;
   height: "auto";
 }
+
+img[alt="Jessica Powell"]{
+  max-width: 200px; 
+  height: "auto";
+}
+
+img[alt="Douglas McCausland"]{
+  max-width: 200px; 
+  height: "auto";
+}
+
+img[alt="Tony Brooke"]{
+  max-width: 200px; 
+  height: "auto";
+}
+
+img[alt="Heidi Trefethen"]{
+  max-width: 200px; 
+  height: "auto";
+}
+
+img[alt="Anna Huang"]{
+  max-width: 200px; 
+  height: "auto";
+}
+
+img[alt="Stephen White"]{
+  max-width: 200px; 
+  height: "auto";
+}
